Preserve immutable hydrology deployment boundaries